sumo/tests/duarouter/errors/no_net/Makefile.am
EXTRA_DIST =  errors.duarouter.exe increasing_trips.net.xml \
increasing_trips.trips.xml options.duarouter output.duarouter.exe \
routes.duarouter.exe
